# game2d

./: .gitignore  CMakeLists.txt  TODO.org  build.bat  build.sh  build_ems.sh  build_linux.sh  build_web.sh  build_win32.bat  build_win32.sh  main.cpp  pch.h  rsync_script.sh  todo.txt
.github/: README.org
res/: map_level01.json  necromancer.ent  skeleton.ent  spider.ent
src/: animation.h  base.h  bitmap_font.h  camera.cpp  camera.h  collision.cpp  collision.h  command.cpp  command.h  debug.h  entity.cpp  entity.h  entitymgr.cpp  entitymgr.h  event.cpp  event.h  game.cpp  game.h  game.hpp  gamelayer.cpp  gamelayer.h  globals.cpp  globals.h  imguilayer.cpp  imguilayer.h  input.cpp  input.h  interface.h  introspection.cpp  layer.cpp  layer.h  levelgen.cpp  levelgen.h  memory.h  menulayer.cpp  menulayer.h  parser.cpp  physics.cpp  physics.h  platform.h  (+26 more)
